test/files/neg/t4460b.check
t4460b.scala:7: error: constructor invokes itself
	  def this() = this() // was binding to Predef.<init> !!
                       ^
one error found
